[gd_scene load_steps=7 format=3 uid="uid://cab1n23yxjrtw"]

[ext_resource type="FontFile" uid="uid://cfb0wwlmunlb8" path="res://fonts/Xolonium-Regular.ttf" id="1_pauw8"]
[ext_resource type="Script" path="res://hud.gd" id="1_w1sja"]

[sub_resource type="InputEventAction" id="InputEventAction_1yg6v"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_is84b"]
events = [SubResource("InputEventAction_1yg6v")]

[sub_resource type="InputEventAction" id="InputEventAction_gnuxd"]
action = &"reload_game"

[sub_resource type="Shortcut" id="Shortcut_75gnx"]
events = [SubResource("InputEventAction_gnuxd")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_w1sja")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_right = 24.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_pauw8")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -83.5
offset_right = 240.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_pauw8")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 160.0
offset_right = 100.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_pauw8")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_is84b")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ReloadButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 38.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_pauw8")
theme_override_font_sizes/font_size = 24
shortcut = SubResource("Shortcut_75gnx")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Restart"

[node name="ExitBotton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.5
offset_top = -70.0
offset_right = 28.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_pauw8")
theme_override_font_sizes/font_size = 24
text = "Exit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="ExitBotton" to="." method="_on_exit_botton_pressed"]
